# MDB-Changelog-Runner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  publish.yml
src/mdb_changelog_runner/: __init__.py  errors.py  executor.py  parser.py  types.py
tests/: test_executor.py  test_parser.py  test_public_api.py
