[project]
name = "mdb-changelog-runner"
version = "0.1.0"
description = "Lightweight Liquibase-style XML changelog executor for Neo4j/MDB updates"
readme = "README.md"
authors = [
    { name = "knockknockyoo", email = "iheaven0129@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "python-dateutil>=2.9",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
