[project]
name = "mdb-changelog-runner"
version = "1.0.1"
description = "Lightweight Liquibase-style XML changelog executor for Neo4j/MDB updates"
readme = "README.md"
authors = [
    { name = "knockknockyoo", email = "iheaven0129@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "neo4j>=4.4,<5.0",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
